request post logic added generic view for request detail comment field to post form added

--- a/templates/nca/index.html
+++ b/templates/nca/index.html
@@ -36,6 +36,9 @@
         <label>Do you have microphone
             <input type="checkbox" name="mic"><br/>
         </label>
+        <label>
+            <textarea name="comment" maxlength="400" placeholder="Type in your comment here..."></textarea>
+        </label>
 
         <input type="submit" value="Post"/>
     </form>
