--- a/templates/nca/base.html
+++ b/templates/nca/base.html
@@ -5,7 +5,14 @@
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
-
+{% if messages %}
+    <ul class="messages">
+        {% for message in messages %}
+            <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+        {% endfor %}
+    </ul>
+{% endif %}
+<h1><a href="/">Home</a><br></h1>
 {% block body %}
 
 {% endblock %}
