--- a/templates/newcoop_app/base.html
+++ b/templates/newcoop_app/base.html
@@ -1,21 +1,34 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    {# Load the tag library #}
+    {% load bootstrap4 %}
+
+
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
     <meta charset="UTF-8">
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
-{% if messages %}
-    <ul class="messages">
-        {% for message in messages %}
-            <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-        {% endfor %}
-    </ul>
-{% endif %}
-<h1><a href="/">Home</a><br></h1>
-{% block body %}
+<div class="container-fluid">
+    {# Display django.contrib.messages as Bootstrap alerts #}
+    {% bootstrap_messages %}
+    <div class="col-sm"></div>
+    <div class="col-sm">
 
-{% endblock %}
+        <h1><a href="/">Home</a><br></h1>
+
+        {% block body %}
+        {% endblock %}
+    </div>
+    <div class="col-sm"></div>
+</div>
 
 </body>
+
+{# Load CSS and JavaScript #}
+{% bootstrap_css %}
+{% bootstrap_javascript jquery='full' %}
 </html>
