--- a/templates/search/search.html
+++ b/templates/search/search.html
@@ -48,7 +48,7 @@
             <li class="list-group-item d-flex justify-content-between align-items-center">
                 <a href="{% url 'newcoop_app:request_detail' result.object.id %}">{{ result.object }}</a>
                 <a href="{% url 'newcoop_app:request_detail' result.object.id %}#comments">
-                    <span class="badge badge-primary badge-pill">
+                    <span class="badge badge-primary badge">
                         {{ result.object.comments_count }} comments
                     </span>
                 </a>
