--- a/templates/newcoop_app/base.html
+++ b/templates/newcoop_app/base.html
@@ -10,6 +10,7 @@
 
     <meta charset="UTF-8">
     <title>{% block title %}{% endblock %}</title>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-2.x-git.min.js"></script>
 </head>
 <body>
 <div class="container-fluid">
@@ -27,7 +28,6 @@
 </div>
 
 </body>
-
 {# Load CSS and JavaScript #}
 {% bootstrap_css %}
 {% bootstrap_javascript jquery='full' %}
