--- a/templates/newcoop_app/base.html
+++ b/templates/newcoop_app/base.html
@@ -21,7 +21,7 @@
 
         <h1><a href="/">Home</a><br></h1>
 
-        {% block body %}
+        {% block content %}
         {% endblock %}
     </div>
     <div class="col-sm"></div>
