--- a/templates/newcoop_app/index.html
+++ b/templates/newcoop_app/index.html
@@ -4,7 +4,7 @@
     Index page
 {% endblock %}
 
-{% block body %}
+{% block content %}
     {#    SEARCH form #}
     {% load bootstrap4 %}
     <form action="{% url 'haystack_search' %}" method="get">
