--- a/templates/newcoop_app/request_detail.html
+++ b/templates/newcoop_app/request_detail.html
@@ -4,7 +4,7 @@
     {{ gamerequest }}
 {% endblock %}
 
-{% block body %}
+{% block content %}
 
     <div class="card">
         <div class="card-header d-flex">
