--- a/templates/newcoop_app/request_detail.html
+++ b/templates/newcoop_app/request_detail.html
@@ -21,7 +21,15 @@
                     <form action="{% url 'newcoop_app:like_post' gamerequest.id %}" method="post">
                         {% csrf_token %}
 
-                        <input type="submit" name="action" value="{% if voted %}Unlike{% else %}Like{% endif %}"/>
+                        <button class="btn" type="submit" name="action" value="
+                            {% if voted %}
+                                Unlike">
+                            <i class="fas fa-thumbs-up" style="color:dodgerblue"></i>
+                        {% else %}
+                            Like">
+                            <i class="far fa-thumbs-up"></i>
+                        {% endif %}
+                        </button>
                     </form>
                 {% endif %}
             </div>
@@ -68,9 +76,13 @@
 
     {% if comments|length > 0 %}
         <a id="comments"></a>
-
         {% for comment in comments %}
-            <div class="card">
+            <div class="card w-75
+            {% if forloop.counter0|divisibleby:2 %}
+                mr-auto
+            {% else %}
+                ml-auto
+            {% endif %}">
                 <div class="card-header">
                     <b>{{ comment.user }}</b> at {{ comment.pub_date|date:"H:i, d M y" }}
                 </div>
@@ -80,7 +92,6 @@
             </div>
             <br>
         {% endfor %}
-
     {% endif %}
 
     {% if user.is_authenticated and form %}
