--- a/templates/newcoop_app/index.html
+++ b/templates/newcoop_app/index.html
@@ -5,6 +5,14 @@
 {% endblock %}
 
 {% block content %}
+    <script>
+        $(document).ready(function () {
+            $.fn.modal.Constructor.prototype._enforceFocus = function () {
+            };
+        });
+
+    </script>
+
     {#    SEARCH form #}
     {% load bootstrap4 %}
     <form action="{% url 'haystack_search' %}" method="get">
@@ -40,7 +48,7 @@
             </button>
             your own game request!
         </h2>
-        <div class="modal fade myModal" data-keyboard="false" role="dialog"
+        <div class="modal fade myModal" data-keyboard="false" tabindex="-1" role="dialog"
              aria-labelledby="myLargeModalLabel"
              aria-hidden="true"
              id="myModal">
@@ -71,14 +79,7 @@
 
             </div>
         </div>
-        <script>
-            $(document).ready(function () {
-                $("#id_game").select2({
-                    dropdownParent: $("#myModal")
-                });
-            });
 
-        </script>
 
     {% endif %}
 </div>
